--- a/index.html
+++ b/index.html
@@ -408,6 +408,106 @@
         // Card image cache (improves performance)
         const cardImageCache = new Map();
         
+        // ── Pink Slip Pick Screen (extracted as proper component to satisfy Rules of Hooks) ──
+        const PinkSlipPickScreen = ({ currentBattle, battleResults, viewingFriendStarters, setViewingFriendStarters, setBattleView, claimPinkSlip, pinkSlipAnimating, pinkSlipSuccess, database }) => {
+            const [pinkSlipSelected, setPinkSlipSelected] = React.useState(null);
+
+            const loserId = battleResults.loserUserId;
+            const loserName = battleResults.loserUserId === currentBattle.initiatorId
+                ? currentBattle.initiatorName : currentBattle.accepterName;
+
+            // Load loser's starters when entering this screen
+            React.useEffect(() => {
+                let cancelled = false;
+                async function loadLoserStarters() {
+                    if (!loserId) return;
+                    if (viewingFriendStarters && viewingFriendStarters.filter(Boolean).length > 0) return;
+                    try {
+                        const snap = await database.ref(`users/${loserId}/starters`).once('value');
+                        const starters = snap.val() || [null,null,null,null,null,null];
+                        if (!cancelled) setViewingFriendStarters(starters);
+                    } catch(e) { console.error('Failed to load loser starters', e); }
+                }
+                loadLoserStarters();
+                return () => { cancelled = true; };
+            }, [loserId]);
+
+            return (
+                <div className="fixed inset-0 bg-gradient-to-br from-pink-950 via-rose-900 to-black z-[95] overflow-y-auto">
+                    <div className="min-h-screen p-5">
+                        <div className="flex justify-between items-center mb-4">
+                            <h2 className="text-2xl font-bold text-white">🎀 Pink Slip Ball</h2>
+                            <button
+                                onClick={() => setBattleView('results')}
+                                className="w-10 h-10 bg-pink-800 hover:bg-pink-700 rounded-full flex items-center justify-center text-white text-lg transition"
+                            >✕</button>
+                        </div>
+
+                        <div className="bg-pink-900 bg-opacity-40 border border-pink-600 rounded-xl p-4 mb-6 text-center">
+                            <div className="text-4xl mb-2">🎀</div>
+                            <p className="text-pink-200 text-sm font-bold">You won the battle!</p>
+                            <p className="text-pink-300 text-xs mt-1">
+                                Tap a card to magnify it, then throw the Pink Slip Ball to claim it from {loserName}.
+                            </p>
+                        </div>
+
+                        {viewingFriendStarters.filter(Boolean).length === 0 && (
+                            <div className="text-center py-12">
+                                <div className="loader mx-auto mb-4"></div>
+                                <div className="text-pink-300 text-sm">Loading {loserName}'s starters...</div>
+                            </div>
+                        )}
+
+                        <div className="grid grid-cols-2 gap-3">
+                            {viewingFriendStarters.filter(Boolean).map(pokemon => (
+                                <button
+                                    key={pokemon.id}
+                                    onClick={() => setPinkSlipSelected(pokemon)}
+                                    disabled={pinkSlipAnimating}
+                                    className="relative rounded-xl border-2 border-pink-600 bg-pink-900 bg-opacity-30 hover:bg-opacity-50 active:scale-95 transition overflow-hidden"
+                                >
+                                    <PokemonCard pokemon={pokemon} />
+                                </button>
+                            ))}
+                        </div>
+                    </div>
+
+                    {/* Magnified card overlay */}
+                    {pinkSlipSelected && (
+                        <div className="fixed inset-0 bg-black bg-opacity-90 z-[100] flex flex-col items-center justify-center p-6">
+                            <button
+                                onClick={() => { if (!pinkSlipAnimating) setPinkSlipSelected(null); }}
+                                className="absolute top-4 right-4 w-12 h-12 bg-white bg-opacity-20 hover:bg-opacity-30 rounded-full flex items-center justify-center text-white text-2xl font-bold z-10 transition"
+                            >×</button>
+
+                            <div className="relative w-full max-w-xs select-none">
+                                <PokemonCard pokemon={pinkSlipSelected} className="w-full shadow-2xl rounded-2xl" />
+                                {pinkSlipAnimating && (
+                                    <div className="absolute inset-0 bg-black bg-opacity-60 rounded-2xl flex flex-col items-center justify-center z-10">
+                                        <div className={`text-6xl mb-3 ${pinkSlipSuccess ? '' : 'pink-slip-throw'}`}>🎀</div>
+                                        <div className="text-white font-bold text-sm">
+                                            {pinkSlipSuccess ? '✅ Caught!' : 'Throwing Pink Slip Ball...'}
+                                        </div>
+                                    </div>
+                                )}
+                            </div>
+
+                            {!pinkSlipAnimating && (
+                                <button
+                                    onClick={() => claimPinkSlip(pinkSlipSelected)}
+                                    className="mt-6 w-full max-w-xs py-4 bg-gradient-to-r from-pink-600 to-rose-500 hover:from-pink-700 hover:to-rose-600 text-white rounded-2xl font-bold text-lg shadow-2xl pink-slip-glow transition"
+                                >
+                                    🎀 Throw Pink Slip Ball!
+                                </button>
+                            )}
+
+                            <p className="mt-3 text-pink-300 text-xs opacity-70">Tap × to pick a different Pokémon</p>
+                        </div>
+                    )}
+                </div>
+            );
+        };
+
         const PokemonCard = ({ pokemon, onClick, showDelete, onDelete, className = "", showTradeBadge = false, enableInteractiveView = false }) => {
             const [cardImage, setCardImage] = useState(null);
             const [showInteractive, setShowInteractive] = useState(false);
@@ -8683,96 +8783,19 @@
                         )}
 
                         {/* ⚔️ PINK SLIP PICK SCREEN */}
-                        {battleView === 'pinkSlip' && currentBattle && battleResults && (() => {
-                            const [pinkSlipSelected, setPinkSlipSelected] = React.useState(null);
-                            const loserName = battleResults.loserUserId === currentBattle.initiatorId
-                                ? currentBattle.initiatorName : currentBattle.accepterName;
-
-                            return (
-                                <div className="fixed inset-0 bg-gradient-to-br from-pink-950 via-rose-900 to-black z-[95] overflow-y-auto">
-                                    <div className="min-h-screen p-5">
-                                        <div className="flex justify-between items-center mb-4">
-                                            <h2 className="text-2xl font-bold text-white">🎀 Pink Slip Ball</h2>
-                                            <button
-                                                onClick={() => setBattleView('results')}
-                                                className="w-10 h-10 bg-pink-800 hover:bg-pink-700 rounded-full flex items-center justify-center text-white text-lg transition"
-                                            >✕</button>
-                                        </div>
-
-                                        <div className="bg-pink-900 bg-opacity-40 border border-pink-600 rounded-xl p-4 mb-6 text-center">
-                                            <div className="text-4xl mb-2">🎀</div>
-                                            <p className="text-pink-200 text-sm font-bold">You won the battle!</p>
-                                            <p className="text-pink-300 text-xs mt-1">
-                                                Tap a card to magnify it, then throw the Pink Slip Ball to claim it from {loserName}.
-                                            </p>
-                                        </div>
-
-                                        {/* Loading state */}
-                                        {viewingFriendStarters.filter(Boolean).length === 0 && (
-                                            <div className="text-center py-12">
-                                                <div className="loader mx-auto mb-4"></div>
-                                                <div className="text-pink-300 text-sm">Loading {loserName}'s starters...</div>
-                                            </div>
-                                        )}
-
-                                        {/* Starters grid — tap to magnify */}
-                                        <div className="grid grid-cols-2 gap-3">
-                                            {viewingFriendStarters.filter(Boolean).map(pokemon => (
-                                                <button
-                                                    key={pokemon.id}
-                                                    onClick={() => setPinkSlipSelected(pokemon)}
-                                                    disabled={pinkSlipAnimating}
-                                                    className="relative rounded-xl border-2 border-pink-600 bg-pink-900 bg-opacity-30 hover:bg-opacity-50 active:scale-95 transition overflow-hidden"
-                                                >
-                                                    <PokemonCard pokemon={pokemon} />
-                                                </button>
-                                            ))}
-                                        </div>
-                                    </div>
-
-                                    {/* ── Magnified card overlay — appears when a card is tapped ── */}
-                                    {pinkSlipSelected && (
-                                        <div className="fixed inset-0 bg-black bg-opacity-90 z-[100] flex flex-col items-center justify-center p-6">
-                                            {/* Close without claiming */}
-                                            <button
-                                                onClick={() => { if (!pinkSlipAnimating) setPinkSlipSelected(null); }}
-                                                className="absolute top-4 right-4 w-12 h-12 bg-white bg-opacity-20 hover:bg-opacity-30 rounded-full flex items-center justify-center text-white text-2xl font-bold z-10 transition"
-                                            >×</button>
-
-                                            {/* The card — full-width like InteractiveCardViewer */}
-                                            <div className="relative w-full max-w-xs select-none">
-                                                <PokemonCard
-                                                    pokemon={pinkSlipSelected}
-                                                    className="w-full shadow-2xl rounded-2xl"
-                                                />
-
-                                                {/* Ball throw overlay */}
-                                                {pinkSlipAnimating && (
-                                                    <div className="absolute inset-0 bg-black bg-opacity-60 rounded-2xl flex flex-col items-center justify-center z-10">
-                                                        <div className={`text-6xl mb-3 ${pinkSlipSuccess ? '' : 'pink-slip-throw'}`}>🎀</div>
-                                                        <div className="text-white font-bold text-sm">
-                                                            {pinkSlipSuccess ? '✅ Caught!' : 'Throwing Pink Slip Ball...'}
-                                                        </div>
-                                                    </div>
-                                                )}
-                                            </div>
-
-                                            {/* Confirm / throw button */}
-                                            {!pinkSlipAnimating && (
-                                                <button
-                                                    onClick={() => claimPinkSlip(pinkSlipSelected)}
-                                                    className="mt-6 w-full max-w-xs py-4 bg-gradient-to-r from-pink-600 to-rose-500 hover:from-pink-700 hover:to-rose-600 text-white rounded-2xl font-bold text-lg shadow-2xl pink-slip-glow transition"
-                                                >
-                                                    🎀 Throw Pink Slip Ball!
-                                                </button>
-                                            )}
-
-                                            <p className="mt-3 text-pink-300 text-xs opacity-70">Tap × to pick a different Pokémon</p>
-                                        </div>
-                                    )}
-                                </div>
-                            );
-                        })()}
+                        {battleView === 'pinkSlip' && currentBattle && battleResults && (
+                            <PinkSlipPickScreen
+                                currentBattle={currentBattle}
+                                battleResults={battleResults}
+                                viewingFriendStarters={viewingFriendStarters}
+                                setViewingFriendStarters={setViewingFriendStarters}
+                                setBattleView={setBattleView}
+                                claimPinkSlip={claimPinkSlip}
+                                pinkSlipAnimating={pinkSlipAnimating}
+                                pinkSlipSuccess={pinkSlipSuccess}
+                                database={database}
+                            />
+                        )}
 
                         {/* 👥 Friends Search Modal - AFTER ALL VIEWS */}
                         {showFriendSearch && firebaseProfile && (
